# Orbital

./: .gitignore  CMakeLists.txt  README.md
docs/: bluetooth-audio-setup.md
plugins/bluetooth/: DeviceDetailPage.qml  Page.qml  manifest.json
plugins/example-dependent/: Page.qml  manifest.json
plugins/example-hello/: Page.qml  manifest.json
plugins/sound/: CardProfilePage.qml  DeviceListPage.qml  Page.qml  manifest.json  service.qml
qml/: AboutPage.qml  CircleProgress.qml  CustomKeyboard.qml  LedPage.qml  LineChart.qml  Main.qml  PluginsPage.qml  SettingsPage.qml  SystemDetailsPage.qml  TerminalPage.qml  TerminalView.qml  WifiConnectPage.qml  WifiPage.qml
scripts/: orbital_update.sh  run.sh
src/: SystemMonitor.cpp  SystemMonitor.h  main.cpp
src/backend/: DisplayBackend.cpp  DisplayBackend.h  LedBackend.cpp  LedBackend.h  SystemDetailsBackend.cpp  SystemHelpers.h  SystemStatsBackend.cpp  SystemStatsBackend.h  TerminalBackend.cpp  TerminalBackend.h  TerminalLineModel.cpp  TerminalLineModel.h  WifiBackend.cpp  WifiBackend.h
src/plugins/: OrbitalApi.cpp  OrbitalApi.h  PluginInfo.h  PluginManager.cpp  PluginManager.h
